--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,13 @@ body {
     font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
+    
 
 }
 
 .top-img {
-    width: 80%;
+    width: 70%;
     justify-content: center;
 }
 
@@ -18,7 +19,7 @@ body {
   width: 90%;
   max-width: 500px;
   display: flex;
-  flex-direction: column;
+  flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
   background-color: #fff3f0;
@@ -26,9 +27,10 @@ body {
   border-radius: 20px;
   -webskit-box-shadow: -2px 2px 5px 0px rgba(0 0 0 / 27%);
   box-shadow: 2px 2px 2px 0px rgba(0 0 0 / 5%); 
+  
 }
 
-a {
+#designed {
     text-decoration: none;
     color: #FFD8D1;
 }
@@ -60,6 +62,7 @@ h1 {
     color: #ff5717;
     font-weight: 500;
 }
+
 
 .description-text {
     display: flex;
@@ -93,6 +96,9 @@ button {
 
 button:hover {
     background-color: #FFD8D1;
+    color: #ff5717;
+    border: 2px solid #ff5717;
+    transform: scale(1.1);
 }
 
 button:active {
@@ -102,4 +108,49 @@ button:active {
 
 .hide {
     display: none;
+}
+
+h3 {
+    text-align: center;
+}
+
+h4 {
+    font-weight: 100;
+    text-align: center;
+}
+
+ul {
+    font-weight: 100;
+    line-height: 1.5;
+}
+
+a {
+    list-style-type:disc;
+    text-decoration: none;
+    color:#ff5717;
+    margin: auto;
+}
+
+a:hover {
+    color: #2b2b2b;
+}
+
+button.start-over {
+    background-color:#ff5717;
+    padding: 20px 40px;
+    margin-top: 2em;
+    width: 100%;
+    border-radius: 10px;
+    border: none;
+    font-weight: 500;
+    color: #fff;
+    font-size: 20px;
+    margin-bottom: 2em;
+}
+
+button.start-over:hover {
+    transform:scale(1.1);
+    background-color:#FFD8D1;
+    color: #ff5717;
+    border: 2px solid #ff5717;
 }
